--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-      <%= link_to image_tag("il_logo.png", class:"logo"), "/" %>
+      <%= link_to image_tag("il_logo.png", class:"logo-img"), "/" %>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="/" class="nav-link px-2 text-white">Incident Log</a></li>
+        <li><%= link_to 'Incident Log', root_path, class:"nav-link px-2 text-white" %></li>
         <li><a href="/incidents/new" class="nav-link px-2 text-white">Post a new incident</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">Features</a></li>
         <li><a href="#" class="nav-link px-2 text-secondary">Pricing</a></li>
