--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -9,11 +9,12 @@
           <%# インシデント情報 %>
           <div class="col d-flex">
             <div class="col">
-              <div class="card-body">
+              <div class="card-body text-center">
+                <small>Incident</small>
                 <% if incident.image.attached? %>
-                  <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
+                  <%= image_tag incident.image, class:"d-block mx-auto mt-2 image-index" %>
                 <% else %>
-                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-index" %>
                 <% end %>
               </div>
             </div>
@@ -45,8 +46,9 @@
             <%# レスポンス未投稿の場合 %>
             <div class="col d-flex">
               <div class="col">
-                <div class="card-body">
-                  <%= image_tag "unsolved.png", class:"d-block mx-auto image-index" %>
+                <div class="card-body text-center">
+                <small>Response</small>
+                  <%= image_tag "unsolved.png", class:"d-block mx-auto mt-2 image-index" %>
                 </div>
               </div>
               <div class="col">
@@ -61,11 +63,12 @@
             <%# レスポンス投稿済みの場合 %>
             <div class="col d-flex">
               <div class="col">
-                <div class="card-body">
+                <div class="card-body text-center">
+                <small>Response</small>
                   <% if incident.response.image.attached? %>
-                    <%= image_tag incident.response.image, class:"d-block mx-auto image-index" %>
+                    <%= image_tag incident.response.image, class:"d-block mx-auto mt-2 image-index" %>
                   <% else %>
-                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-index" %>
                   <% end %>
                 </div>
               </div>
