--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row col-lg-6 mx-auto">
     <h1 class="mt-5 text-center form-title">レスポンス投稿</h1>
-    <%= form_with model: [@incident, @response], id: 'new_post', local: true do |f| %>
+    <%= form_with model: [@incident, @response], id: 'post_edit', local: true do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
 
       <div class="my-3">
@@ -32,7 +32,7 @@
         <div id="previews" class="text-center"></div>
       </div>
 
-      <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">投稿する</button>
+      <button class="w-100 btn btn-lg btn-primary my-4" type="submit">投稿する</button>
     <% end %>
   </div>
 </div>
