--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -9,18 +9,18 @@
           <%# インシデント情報 %>
           <div class="col d-flex">
             <div class="col">
-              <div class="card-body text-center">
-                <small>Incident</small>
+              <div class="card-body">
                 <% if incident.image.attached? %>
-                  <%= image_tag incident.image, class:"d-block mx-auto mt-2 image-index" %>
+                  <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
                 <% else %>
-                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-index" %>
+                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
                 <% end %>
               </div>
             </div>
             <div class="col">
               <div class="card-body">
-                <div class="card-text">
+                <small class="text-danger">Incident</small>
+                <div class="card-text mt-1">
                   <small class="text-secondary">日付</small><br>
                   <%= incident.date %>
                 </div>
@@ -46,15 +46,19 @@
             <%# レスポンス未投稿の場合 %>
             <div class="col d-flex">
               <div class="col">
-                <div class="card-body text-center">
-                <small>Response</small>
-                  <%= image_tag "unsolved.png", class:"d-block mx-auto mt-2 image-index" %>
+                <div class="card-body">
+                  <%= image_tag "unsolved.png", class:"d-block mx-auto image-index" %>
                 </div>
               </div>
               <div class="col">
                 <div class="card-body">
-                  <h4>未解決のインシデントです</h4>
-                  <span>解決後レスポンスを投稿してください</span>  
+                  <small class="text-secondary">Response</small>
+                  <div class="card-text mt-1">
+                    <h3>未対応</h3>
+                  </div>
+                  <div class="card-text">
+                    <div>レスポンスを投稿してください</div>  
+                  </div>
                 </div>
               </div>
             </div>
@@ -63,18 +67,18 @@
             <%# レスポンス投稿済みの場合 %>
             <div class="col d-flex">
               <div class="col">
-                <div class="card-body text-center">
-                <small>Response</small>
+                <div class="card-body">
                   <% if incident.response.image.attached? %>
-                    <%= image_tag incident.response.image, class:"d-block mx-auto mt-2 image-index" %>
+                    <%= image_tag incident.response.image, class:"d-block mx-auto image-index" %>
                   <% else %>
-                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-index" %>
+                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
                   <% end %>
                 </div>
               </div>
               <div class="col">
                 <div class="card-body">
-                  <div class="card-text">
+                  <small class="text-primary">Response</small>
+                  <div class="card-text mt-1">
                     <small class="text-secondary">日付</small><br>
                     <%= incident.response.date %>
                   </div>
