一覧表示画面の各カードマウスオーバー時に影を付ける

--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <% @incidents.each do |incident| %>
     <%= link_to incident_path(incident), class:"text-dark text-decoration-none" do %>
-      <div class="card bg-light my-3" >
+      <div class="card bg-light my-3 card-shadow" >
         <div class="row" >
 
           <%# インシデント情報 %>
