--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -107,9 +107,9 @@
   <% end %>
 
   <%# インシデント投稿ボタン %>
-  <%= link_to new_incident_path, class:"post-btn bg-dark text-white text-center p-3" do %>
+  <%= link_to new_incident_path, class:" btn btn-primary post-incident-btn px-2 py-3" do %>
     <small>インシデントを</small><br>
-    <%= image_tag 'plus.png', size: '50x50'%><br>
+    <%= image_tag 'plus.png', size:'35x35' %><br>
     <small>投稿する</small>
   <% end %>
   <%# /インシデント投稿ボタン %>
