各ページに「戻る」ボタンを設置

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -32,7 +32,15 @@
         <div id="previews" class="text-center"></div>
       </div>
 
-      <button class="w-100 btn btn-lg btn-primary my-4" type="submit">投稿する</button>
+      <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">投稿する</button>
     <% end %>
+
+    <div class="row col-lg-6 mx-auto">
+      <div class="card-body my-5">
+        <div class="card-text d-grid gap-2 d-md-flex justify-content-md-center">
+          <%= link_to '一覧画面に戻る', root_path, class:"btn btn-outline-secondary" %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
