--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,5 +31,13 @@
 
       <button class="w-100 btn btn-lg btn-primary mt-4" type="submit">登録する</button>
     <% end %>
+
+    <div class="row col-lg-6 mx-auto">
+      <div class="card-body my-5">
+        <div class="card-text d-grid gap-2 d-md-flex justify-content-md-center">
+          <%= link_to '一覧画面に戻る', root_path, class:"btn btn-outline-secondary" %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
