--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -19,36 +19,32 @@
 
           <%# インシデント情報 %>
           <div class="col d-flex">
-            <div class="col">
-              <div class="card-body">
-                <% if incident.image.attached? %>
-                  <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
-                <% else %>
-                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
-                <% end %>
-              </div>
+            <div class="card-body">
+              <% if incident.image.attached? %>
+                <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
+              <% else %>
+                <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+              <% end %>
             </div>
-            <div class="col">
-              <div class="card-body">
-                <small class="text-danger">Incident</small>
-                <div class="card-text mt-1">
-                  <small class="text-secondary">日付</small><br>
-                  <%= incident.date %>
-                </div>
-                <div class="card-text">
-                  <small class="text-secondary">タイトル</small><br>
-                  <%= incident.title %>
-                </div>
-                <div class="card-text">
-                  <small class="text-secondary">場所</small><br>
-                  <%= incident.place.name %>
-                </div>
-                <div class="card-text">
-                  <small class="text-secondary">投稿者</small><br>
-                  <%= incident.user.name %>
-                </div>
-              </div>
-            </div>
+            <ul class="card-body">
+              <small class="text-danger">Incident</small>
+              <li class="card-text mt-1">
+                <small class="text-secondary">日付</small><br>
+                <%= incident.date %>
+              </li>
+              <li class="card-text">
+                <small class="text-secondary">タイトル</small><br>
+                <%= incident.title %>
+              </li>
+              <li class="card-text">
+                <small class="text-secondary">場所</small><br>
+                <%= incident.place.name %>
+              </li>
+              <li class="card-text">
+                <small class="text-secondary">投稿者</small><br>
+                <%= incident.user.name %>
+              </li>
+            </ul>
           </div>
           <%# /インシデント情報 %>
 
@@ -56,20 +52,16 @@
           <% if incident.response.nil? %>
             <%# レスポンス未投稿の場合 %>
             <div class="col d-flex">
-              <div class="col">
-                <div class="card-body">
-                  <%= image_tag "unsolved.png", class:"d-block mx-auto image-index" %>
-                </div>
+              <div class="card-body">
+                <%= image_tag "unsolved.png", class:"d-block mx-auto image-index" %>
               </div>
-              <div class="col">
-                <div class="card-body">
-                  <small class="text-secondary">Response</small>
-                  <div class="card-text mt-1">
-                    <h3>未対応</h3>
-                  </div>
-                  <div class="card-text">
-                    <div>レスポンスを投稿してください</div>  
-                  </div>
+              <div class="card-body">
+                <small class="text-danger">Response</small>
+                <div class="card-text mt-2">
+                  <h3>未対応</h3>
+                </div>
+                <div class="card-text">
+                  <div>レスポンスを投稿してください</div>  
                 </div>
               </div>
             </div>
@@ -77,36 +69,32 @@
           <% else %>
             <%# レスポンス投稿済みの場合 %>
             <div class="col d-flex">
-              <div class="col">
-                <div class="card-body">
-                  <% if incident.response.image.attached? %>
-                    <%= image_tag incident.response.image, class:"d-block mx-auto image-index" %>
-                  <% else %>
-                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
-                  <% end %>
-                </div>
+              <div class="card-body">
+                <% if incident.response.image.attached? %>
+                  <%= image_tag incident.response.image, class:"d-block mx-auto image-index" %>
+                <% else %>
+                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                <% end %>
               </div>
-              <div class="col">
-                <div class="card-body">
-                  <small class="text-primary">Response</small>
-                  <div class="card-text mt-1">
-                    <small class="text-secondary">日付</small><br>
-                    <%= incident.response.date %>
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">タイトル</small><br>
-                    <%= incident.response.title %>
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">費用</small><br>
-                    <%= incident.response.cost %>
-                  </div>
-                  <div class="card-text">
-                    <small class="text-secondary">投稿者</small><br>
-                    <%= incident.response.user.name %>
-                  </div>
-                </div>
-              </div>
+              <ul class="card-body">
+                <small class="text-primary">Response</small>
+                <li class="card-text mt-1">
+                  <small class="text-secondary">日付</small><br>
+                  <%= incident.response.date %>
+                </li>
+                <li class="card-text">
+                  <small class="text-secondary">タイトル</small><br>
+                  <%= incident.response.title %>
+                </li>
+                <li class="card-text">
+                  <small class="text-secondary">費用</small><br>
+                  <%= incident.response.cost %>
+                </li>
+                <li class="card-text">
+                  <small class="text-secondary">投稿者</small><br>
+                  <%= incident.response.user.name %>
+                </li>
+              </ul>
             </div>
             <%# /レスポンス投稿済みの場合 %>
           <% end %>
