--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,6 +1,8 @@
-<div class="container">
-  <%= form_with(url: search_incidents_path, local: true, method: :get, class: "") do |f| %>
-    <%= f.text_field :keyword, placeholder: "投稿を検索する", class: "" %>
-    <%= f.submit "検索", class: "" %>
-  <% end %>
+<div class="container mb-4">
+  <div class="col-8 mx-auto">
+    <%= form_with(url: search_incidents_path, local: true, method: :get, class: "d-grid gap-2 d-md-flex justify-content-md-end") do |f| %>
+      <%= f.text_field :keyword, placeholder: "例）水漏れ", class: "form-control" %>
+      <%= f.submit "インシデントを検索する", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
