--- a/app/views/incidents/search.html.erb
+++ b/app/views/incidents/search.html.erb
@@ -1,1 +1,13 @@
 <%= render "shared/index" %>
+
+<%# 戻るボタン %>
+<div class="row">
+  <div class="col">
+    <div class="card-body mx-2 my-5">
+      <div class="card-text d-grid gap-2 d-md-flex justify-content-md-center">
+        <%= link_to '一覧画面に戻る', root_path, class:"btn btn-outline-secondary" %>
+      </div>
+    </div>
+  </div>
+</div>
+<%# /戻るボタン %>
