--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -142,17 +142,17 @@
                 </div>
               <% end %>
             <% end %>
-            <ul class="mt-3">
+            <div class="mt-3">
               <% @comments.each do |comment| %>
-                <li>
-                  <%= comment.content %>
+                <div class="mx-3">
+                  ・<%= comment.content %>
                   <small class="text-secondary">
                     <%= comment.user.name %>
                     <%= '(' + comment.created_at.to_s(:datetime_jp) + ')' %>
                   </small>
-                </li>
+                </div>
               <% end %>
-            </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -162,7 +162,7 @@
     <%# 戻るボタン %>
     <div class="row">
       <div class="col">
-        <div class="card-body mx-2 mb-5">
+        <div class="card-body mx-2 my-5">
           <div class="card-text d-grid gap-2 d-md-flex justify-content-md-center">
             <%= link_to '一覧画面に戻る', root_path, class:"btn btn-outline-secondary" %>
           </div>
