画像ファイルjpegをjpgに変更

--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -22,7 +22,7 @@
                 <% if incident.image.attached? %>
                   <%= image_tag incident.image, class:"d-block mx-auto image-index" %>
                 <% else %>
-                  <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                  <%= image_tag "no_image.jpg" , class:"d-block mx-auto image-index" %>
                 <% end %>
               </div>
             </div>
@@ -80,7 +80,7 @@
                   <% if incident.response.image.attached? %>
                     <%= image_tag incident.response.image, class:"d-block mx-auto image-index" %>
                   <% else %>
-                    <%= image_tag "no_image.jpeg" , class:"d-block mx-auto image-index" %>
+                    <%= image_tag "no_image.jpg" , class:"d-block mx-auto image-index" %>
                   <% end %>
                 </div>
               </div>
