--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -15,7 +15,7 @@
           <% if @incident.image.attached? %>
             <%= image_tag @incident.image, class:"d-block mx-auto mt-2 image-show" %>
           <% else %>
-            <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-show" %>
+            <%= image_tag "no_image.jpg" , class:"d-block mx-auto mt-2 image-show" %>
           <% end %>
         </div>
         <ul class="card-body mx-2">
@@ -67,7 +67,7 @@
             <% if @incident.response.image.attached? %>
               <%= image_tag @incident.response.image, class:"d-block mx-auto mt-2 image-show" %>
             <% else %>
-              <%= image_tag "no_image.jpeg" , class:"d-block mx-auto mt-2 image-show" %>
+              <%= image_tag "no_image.jpg" , class:"d-block mx-auto mt-2 image-show" %>
             <% end %>
           </div>
           <ul class="card-body mx-2">
